# gene-bot

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/gene/: Cargo.toml
crates/gene-core/: Cargo.toml
crates/gene-core/src/: chat.rs  config.rs  doctor.rs  hash.rs  lib.rs  persist.rs  train.rs
crates/gene-core/src/dataset/: format.rs  mod.rs
crates/gene-core/src/eval/: mod.rs
crates/gene-core/src/llm/: mod.rs  stream.rs  types.rs
crates/gene-core/src/model/: conversation.rs  dataset.rs  mod.rs
crates/gene-core/src/provider/: mod.rs
crates/gene-core/src/runs/: mod.rs
crates/gene-core/src/tools/: exec.rs  mod.rs
crates/gene/src/: app.rs  cli.rs  main.rs
docs/: cli.md  config.md
examples/: README.md  multi-provider.toml
examples/evals/: capitals.json
src/: config.rs  gui.rs  main.rs  persist.rs
src/model/: dataset.rs
src/tools/: mod.rs
