[package]
name = "gene"
version = "0.1.0"
edition = "2021"
description = "Personal terminal AI assistant: chat, edit-to-correct, agentic shell, real LoRA fine-tuning"
license = "Apache-2.0"
repository = "https://github.com/matthew-demidoff/gene-bot"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
eventsource-stream = "0.2"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eframe = "0.31"
egui = "0.31"
directories = "5"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
shell-words = "1"
uuid = { version = "1", features = ["v4", "serde"] }

[profile.release]
strip = true
