[workspace]
resolver = "2"
members = ["crates/gene-core", "crates/gene"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/matthew-demidoff/gene-bot"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
eventsource-stream = "0.2"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
toml = "0.8"
chrono = { version = "0.4", features = ["clock", "serde"] }
anyhow = "1"
shell-words = "1"
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
eframe = "0.31"
egui = "0.31"
egui_plot = "0.31"

[profile.release]
strip = true
