[package]
name = "gene-ai"
description = "gene: a local-first toolkit for chatting with, evaluating, and fine-tuning open LLMs."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
default-run = "gene"
keywords = ["llm", "fine-tuning", "mlx", "ollama", "cli"]
categories = ["command-line-utilities", "science"]

[[bin]]
name = "gene"
path = "src/main.rs"

[features]
default = ["gui"]
# The egui desktop frontend. Disable (`--no-default-features`) for a lean
# headless CLI with no GUI/windowing build dependencies.
gui = ["dep:eframe", "dep:egui", "dep:egui_plot", "dep:toml", "dep:tracing", "dep:tracing-subscriber"]

[dependencies]
# The version must track the workspace version — `cargo publish` requires a
# version on a path dependency (and uses it as the crates.io requirement).
gene-core = { path = "../gene-core", version = "0.3.0" }
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
reqwest.workspace = true
serde_json.workspace = true
toml = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
eframe = { workspace = true, optional = true }
egui = { workspace = true, optional = true }
egui_plot = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
